2008-03-06  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Updated German translation.

2008-03-06  I. Felix <ifelix@svn.gnome.org>

	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan

2008-03-06  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-06  Runa Bhattacharjee <runab@fedoraproject.org>

	* bn_IN: Correction of header section for plural form

2008-03-05  Runa Bhattacharjee <runab@fedoraproject.org>

	* bn_IN.po: Added Bengali India Translations by Sankarshan Mukhopadhyay
	* LINGUAS: Added Bengali India (bn_IN) to the list of languages

2008-03-05  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* ja.po: Updated Japanese translation.

2008-03-05  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Updated German translation.

2008-03-05  Rahul Bhalerao <b.rahul.pm@gmail.com>

	* mr.po: Updated Marathi Translations by Sandeep Shedmake.

2008-03-04  Gil Forcada  <gforcada@gnome.org>

	* ca.po: Updated Catalan translation.

=== gvfs 0.1.11 ===
=== gvfs 0.1.10 ===
	
2008-03-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2008-03-04  Rajesh Ranjan  <rajeshkajha@yahoo.com>

	* hi.po: Added Hindi translation.

=== gvfs 0.1.9 ===
	
2008-03-04  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.

2008-03-03  Philip Withnall  <pwithnall@svn.gnome.org>

	* en_GB.po: Updated British English translation.

2008-03-03  Rahul Bhalerao <b.rahul.pm@gmail.com>

	* mr.po: Updated Marathi translations from Sandeep Shedmake.

2008-03-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation.

2008-03-03  Leonid Kanter <leon@asplinux.ru>

	* ru.po: Updated Russian translation

2008-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

2008-03-03  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.
