@@ -64,4 +64,10 @@ hal/ghalmount.c
 hal/ghalvolume.c
 hal/ghalvolumemonitor.c
 programs/gvfs-cat.c
+programs/gvfs-copy.c
+programs/gvfs-info.c
+programs/gvfs-ls.c
+programs/gvfs-move.c
 programs/gvfs-open.c
+programs/gvfs-save.c
+programs/gvfs-tree.c
