@@ -1,3 +1,7 @@
+2008-03-06  Marcel Telka  <marcel@telka.sk>
+
+	* POTFILES.in: Added missing files.
+
 2008-03-06  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
